fixed bug with jwt authentication
Signed-off-by: nikita <nikitapopov1295@gmail.com>