@@ -3,7 +3,9 @@ package ru.nikitapopov.weathermeasuresapi.controllers;
 import jakarta.validation.Valid;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.validation.BindingResult;
@@ -15,11 +17,12 @@ import ru.nikitapopov.weathermeasuresapi.dto.AuthenticationDTO;
 import ru.nikitapopov.weathermeasuresapi.models.ApiUser;
 import ru.nikitapopov.weathermeasuresapi.security.ApiUserDetails;
 import ru.nikitapopov.weathermeasuresapi.security.JwtUtil;
-import ru.nikitapopov.weathermeasuresapi.services.ApiUserDetailsService;
+import ru.nikitapopov.weathermeasuresapi.services.ApiUserService;
 import ru.nikitapopov.weathermeasuresapi.utils.AuthenticationDTOValidator;
 
 import java.util.Collections;
 import java.util.Map;
+import java.util.Objects;
 
 @RestController
 @RequestMapping("/api/v1/auth")
@@ -28,60 +31,56 @@ public class AuthenticationController {
     private final AuthenticationDTOValidator authenticationDTOValidator;
     private final JwtUtil jwtUtil;
     private final AuthenticationManager authenticationManager;
-    private final ApiUserDetailsService apiUserDetailsService;
+    private final ApiUserService apiUserService;
     private final ModelMapper modelMapper;
 
     @Autowired
     public AuthenticationController(
             AuthenticationDTOValidator authenticationDTOValidator,
-            JwtUtil jwtUtil, AuthenticationManager authenticationManager,
-            ApiUserDetailsService apiUserDetailsService, ModelMapper modelMapper
+            JwtUtil jwtUtil, AuthenticationManager authenticationManager, ApiUserService apiUserService, ModelMapper modelMapper
     ) {
         this.authenticationDTOValidator = authenticationDTOValidator;
         this.jwtUtil = jwtUtil;
         this.authenticationManager = authenticationManager;
-        this.apiUserDetailsService = apiUserDetailsService;
+        this.apiUserService = apiUserService;
         this.modelMapper = modelMapper;
     }
 
     @PostMapping("/login")
-    public Map<String, String> login(@RequestBody @Valid AuthenticationDTO authenticationDTO,
-                                     BindingResult bindingResult) {
-
-        authenticationDTOValidator.validate(authenticationDTO, bindingResult);
-
-        if (bindingResult.hasErrors()) {
-            return Collections.singletonMap("error", "Invalid credentials!");
-        }
+    public Map<String, String> login(@RequestBody @Valid AuthenticationDTO authenticationDTO) {
 
         UsernamePasswordAuthenticationToken token = new UsernamePasswordAuthenticationToken(
                 authenticationDTO.getUsername(), authenticationDTO.getPassword()
         );
-        authenticationManager.authenticate(token);
 
-        ApiUserDetails user = (ApiUserDetails) SecurityContextHolder.getContext().getAuthentication().getDetails();
-        String jwt = jwtUtil.createToken(user.getUsername());
+        try {
+            authenticationManager.authenticate(token);
+        } catch (BadCredentialsException ex) {
+            return Collections.singletonMap("error", "Invalid credentials!");
+        }
+
+        String jwt = jwtUtil.createToken(authenticationDTO.getUsername());
         return Collections.singletonMap("token", jwt);
     }
 
     @PostMapping("/registration")
-    public Map<String, String> register(@RequestBody @Valid AuthenticationDTO authenticationDTO,
-                                     BindingResult bindingResult) {
+    public Map<?, ?> register(@RequestBody @Valid AuthenticationDTO authenticationDTO,
+                                   BindingResult bindingResult) {
 
         authenticationDTOValidator.validate(authenticationDTO, bindingResult);
 
         if (bindingResult.hasErrors()) {
-            return Collections.singletonMap("error", "Invalid credentials!");
+            return Map.of("error", Objects.requireNonNull(
+                    Objects.requireNonNull(
+                            bindingResult.getFieldError("username")
+                    ).getDefaultMessage()
+            ));
         }
 
-        ApiUser user = apiUserDetailsService.save(convertToApiUser(authenticationDTO));
-
+        ApiUser user = apiUserService.register(convertToApiUser(authenticationDTO));
         String jwt = jwtUtil.createToken(user.getUsername());
 
-        System.out.println(user);
-        System.out.println(jwt);
-
-        return Collections.singletonMap("token", jwt);
+        return Map.of("token", jwt);
     }
 
     private ApiUser convertToApiUser(AuthenticationDTO authenticationDTO) {
